--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" href="./Assets/Logo.jpg" type="image/icon type">
+    <title>Food Ordering App</title>
   </head>
   <body>
     <div id="root"></div>
-    <script
+
+
+    <!-- One way to bring react into your project is by cdn links as below -->
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
+    ></script> -->
 
-    <script src="ReactwithCDN.js"></script>
+    <script type= 'module' src="./src/App.jsx"></script>
   </body>
 </html>
