--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./Assets/Logo.jpg" type="image/icon type">
+    <link rel="icon" href="../Assets/Logo.jpg" type="image/icon type">
     <title>Food Ordering App</title>
   </head>
   <body>
@@ -20,6 +20,6 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script> -->
 
-    <script type= 'module' src="./src/App.jsx"></script>
+    <script type= 'module' src="./App.jsx"></script>
   </body>
 </html>
